# mastodon-follower-export

./: .gitignore  README.md  pyproject.toml
.github/workflows/: build.yml
src/mafolex/: __main__.py  wrapper.py
src/mafolex/gui/: dialogs.py  table.py  widgets.py  window.py  worker.py
src/mastodon_follower_export/: __init__.py  __main__.py  cli.py  dialogs.py  table.py  util.py  widgets.py  window.py  wizard.py  worker.py  wrapper.py  writer.py
src/mastodon_follower_export/gui/: dialogs.py  table.py  window.py  worker.py
